--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ favicon: /favicon.ico
 # Header
 
 # Keywords of your site | 网站关键字
-keywords: hexo,blog,minhow
+keywords: hexo,blog
 # Head headline | 头部标题
-header_title: MinHow's Blog
+header_title:
 # Head description | 头部描述
 header_description: |
   卸下浮躁，保持宁静。
@@ -52,30 +52,18 @@ menu:
 #    url: //minhow.com    Url, absolute or relative path | 链接，绝对或相对路径
 #    target: true         Whether to jump out | 是否跳出
 social:
-  home:
-    title: MinHow
-    url: //minhow.com
-    target: true
-  github:
-    title: Github
-    url: //github.com/wongminho
-    target: true
-  weibo:
-    title: Weibo
-    url: //weibo.com/WongMinHo
-    target: true
-  twitter:
-    title: Twitter
-    url: //twitter.com/huangminhow
-    target: true
-  #qq:
-  #weixin:
-  #snapchat:
-  #telegram:
-  #envelope-o:
-  #facebook:
-  #google:
-  #linkedin:
+  # home:
+  # github:
+  # weibo:
+  # twitter:
+  # qq:
+  # weixin:
+  # snapchat:
+  # telegram:
+  # envelope-o:
+  # facebook:
+  # google:
+  # linkedin:
 
 # Content
 
@@ -169,4 +157,4 @@ access_counter:
   site_pv: 总访问量：
 
 # Copyright Information | 版权信息
-copyright: 2018 MinHow
+copyright: 2018
